log/build_2024-04-22_18-06-13/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target command_publisher[0m
[ 50%] Built target state_publisher
[ 75%] [32mBuilding CXX object CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o[0m
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:62:2: error: expected ‘;’ after class definition
   62 | }
      |  ^
      |  ;
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp: In constructor ‘CommandPublisher::CommandPublisher()’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:33:40: error: ‘using element_type = class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’ {aka ‘class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’} has no member named ‘publisher’; did you mean ‘Publisher’?
   33 |                             publisher->publisher(cmd);
      |                                        ^~~~~~~~~
      |                                        Publisher
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:38:40: error: ‘using element_type = class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’ {aka ‘class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’} has no member named ‘publisher’; did you mean ‘Publisher’?
   38 |                             publisher->publisher(cmd);
      |                                        ^~~~~~~~~
      |                                        Publisher
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:43:40: error: ‘using element_type = class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’ {aka ‘class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’} has no member named ‘publisher’; did you mean ‘Publisher’?
   43 |                             publisher->publisher(cmd);
      |                                        ^~~~~~~~~
      |                                        Publisher
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:48:40: error: ‘using element_type = class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’ {aka ‘class rclcpp::Publisher<std_msgs::msg::Int16_<std::allocator<void> > >’} has no member named ‘publisher’; did you mean ‘Publisher’?
   48 |                             publisher->publisher(cmd);
      |                                        ^~~~~~~~~
      |                                        Publisher
make[2]: *** [CMakeFiles/command_publisher.dir/build.make:63: CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/command_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
